k8sprjs/monitoring/resources/monitoring.namespace.yaml
# Monitoring stack Namespace
apiVersion: v1
kind: Namespace

metadata:
  name: monitoring
